--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">    
+    <div class="container">
+      <h1>Check check check</h1>
         <div class="progress-container">
             <div class="progress" id="progress"></div>
             <div class="circle active">1</div>
